# shader_compressor

./: compress.c  decompress.h
tests/: CMakeLists.txt  Source.cpp
